--- a/Inicio.html
+++ b/Inicio.html
@@ -43,7 +43,7 @@
         <center>
     <h1>Iniciar sesion</h1>
     <img height="120px" width="120px" 
-    src="31369711-signo-de-interrogación-signo-icono-símbolo-de-ayuda-signo-de-preguntas-frecuentes-círculo-botón-plan.webp" 
+    src=url(./interrogacion.jpg)
     alt="Imagen de interrogacion">
     <br>
     <input type="text" placeholder="Escriba su nombre de usuario" required>
