--- a/Inicio.html
+++ b/Inicio.html
@@ -43,8 +43,7 @@
         <center>
     <h1>Iniciar sesion</h1>
     <img height="120px" width="120px" 
-    src=url(./interrogacion.jpg)
-    alt="Imagen de interrogacion">
+    src=(Interrogacion.jpeg)>
     <br>
     <input type="text" placeholder="Escriba su nombre de usuario" required>
     <br>
