--- a/Inicio.html
+++ b/Inicio.html
@@ -43,7 +43,8 @@
         <center>
     <h1>Iniciar sesion</h1>
     <img height="120px" width="120px" 
-    src=(Interrogacion.jpeg)>
+    src="Interrogacion.jpeg")
+    alt="Imagen de interrogacion">
     <br>
     <input type="text" placeholder="Escriba su nombre de usuario" required>
     <br>
