--- a/Inicio.html
+++ b/Inicio.html
@@ -27,17 +27,14 @@
         }
  input{
      font-size: large;
-
  }
  a {
+     color: blueviolet;
      font-size: 16px;
  }
  form {
     background-color:white;
     border-radius: 10px;
- }
- a {
-     color: violet;
  }
     </style>
 </head>
